--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="game-container">
 
-        <!-- Splash Screen (First time visit) -->
+        <!-- Splash Screen -->
         <div id="intro-screen" class="overlay visible">
              <div class="overlay-content">
                 <h1>Password Defender</h1>
@@ -21,52 +21,72 @@
             </div>
         </div>
 
-        <!-- NEW Main Menu Screen (Level Select) -->
+        <!-- Main Menu Screen -->
         <div id="main-menu-screen" class="overlay">
             <div class="overlay-content">
                 <h1>Select Protocol</h1>
-                <div id="level-select-container">
-                    <!-- Level buttons will be generated here by JS -->
-                </div>
+                <div id="level-select-container"></div>
             </div>
         </div>
         
-        <!-- Game Screen (Actual Gameplay) -->
+        <!-- Game Screen -->
         <div id="game-screen" class="hidden">
+            <!-- Visuals only (background, castle) -->
             <div id="game-world">
                 <div id="game-background"></div>
                 <div id="world-content">
                     <div id="castle-container">
                         <div id="shields-container"></div>
-                        <svg id="castle-svg" viewBox="0 0 120 120"><defs><linearGradient id="wall-gradient" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" stop-color="#E5E5E5"/><stop offset="100%" stop-color="#C5C5C5"/></linearGradient><filter id="shadow" x="-20%" y="-20%" width="140%" height="140%"><feDropShadow dx="0" dy="4" stdDeviation="4" flood-color="#000000" flood-opacity="0.2"/></filter></defs><g filter="url(#shadow)"><path d="M 20 110 L 25 70 L 95 70 L 100 110 Z" fill="url(#wall-gradient)"/><path d="M 15 110 L 15 50 L 40 50 L 40 110 Z" fill="url(#wall-gradient)"/><path d="M 80 110 L 80 50 L 105 50 L 105 110 Z" fill="url(#wall-gradient)"/><path d="M 45 70 L 45 40 L 75 40 L 75 70 Z" fill="url(#wall-gradient)"/><polygon points="15,50 27.5,35 40,50" fill="#2E2E2E"/><polygon points="80,50 92.5,35 105,50" fill="#2E2E2E"/><polygon points="45,40 60,20 75,40" fill="#2E2E2E"/><path d="M 50 110 C 50 90, 70 90, 70 110 Z" fill="#4A4A4A"/></g></svg>
+                        <!-- NEW Hyper-Detailed Castle SVG -->
+                        <svg id="castle-svg" viewBox="0 0 120 120">
+                            <defs>
+                                <linearGradient id="wall-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" stop-color="#E5E5E5" />
+                                    <stop offset="100%" stop-color="#C5C5C5" />
+                                </linearGradient>
+                                <filter id="shadow" x="-20%" y="-20%" width="140%" height="140%">
+                                    <feDropShadow dx="0" dy="4" stdDeviation="4" flood-color="#000000" flood-opacity="0.2"/>
+                                </filter>
+                            </defs>
+                            <g filter="url(#shadow)">
+                                <path d="M 20 110 L 25 70 L 95 70 L 100 110 Z" fill="url(#wall-gradient)"/>
+                                <path d="M 15 110 L 15 50 L 40 50 L 40 110 Z" fill="url(#wall-gradient)"/>
+                                <path d="M 80 110 L 80 50 L 105 50 L 105 110 Z" fill="url(#wall-gradient)"/>
+                                <path d="M 45 70 L 45 40 L 75 40 L 75 70 Z" fill="url(#wall-gradient)"/>
+                                <polygon points="15,50 27.5,35 40,50" fill="#2E2E2E"/>
+                                <polygon points="80,50 92.5,35 105,50" fill="#2E2E2E"/>
+                                <polygon points="45,40 60,20 75,40" fill="#2E2E2E"/>
+                                <path d="M 50 110 C 50 90, 70 90, 70 110 Z" fill="#4A4A4A"/>
+                            </g>
+                        </svg>
                     </div>
                 </div>
             </div>
+            <!-- UI only (buttons, text) -->
             <div id="game-ui">
                 <div class="ui-header">
                     <h2 id="level-title-display"></h2>
                     <div id="wave-display"></div>
                 </div>
-                <div class="ui-center"><p id="level-instructions-display"></p><div id="message-display"></div></div>
-                <div class="ui-footer"><div class="input-wrapper"><input type="text" id="password-input" placeholder="Enter protocol..."><button id="defend-btn">DEPLOY</button></div></div>
-            </div>
-        </div>
-
-        <!-- NEW Level Complete Screen -->
-        <div id="level-complete-screen" class="overlay">
-            <div class="overlay-content">
-                <h2>Protocol Secure</h2>
-                <div id="star-rating"></div>
-                <p>High Score for this level: <span id="level-highscore-display">0</span></p>
-                <div class="button-group">
-                    <button id="replay-btn">Replay</button>
-                    <button id="next-level-btn">Next Level</button>
-                    <button id="main-menu-btn-from-win">Main Menu</button>
+                <div class="ui-center">
+                    <p id="level-instructions-display"></p>
+                    <div id="message-display"></div>
+                </div>
+                <div class="ui-footer">
+                    <div class="input-wrapper">
+                        <input type="text" id="password-input" placeholder="Enter protocol...">
+                        <button id="defend-btn">DEPLOY</button>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- Level Complete Screen -->
+        <div id="level-complete-screen" class="overlay">
+            <div class="overlay-content"><h2>Protocol Secure</h2><div id="star-rating"></div><p>High Score for this level: <span id="level-highscore-display">0</span></p><div class="button-group"><button id="replay-btn">Replay</button><button id="next-level-btn">Next Level</button><button id="main-menu-btn-from-win">Main Menu</button></div></div>
+        </div>
         
-        <!-- Game Over Screen (Failure) -->
+        <!-- Game Over Screen -->
         <div id="game-over-screen" class="overlay">
             <div class="overlay-content"><h2>SYSTEM BREACHED</h2><p>The protocol failed. The firewall has been compromised.</p><button id="main-menu-btn-from-lose">Return to Menu</button></div>
         </div>
